--- a/info.html
+++ b/info.html
@@ -57,7 +57,7 @@
             <div class="card-body">
               <strong><i class="fa-solid fa-g"></i><i class="fa-solid fa-a"></i><i class="fa-solid fa-l"></i> GALGames and Erogames, especially related songs</strong>
               <hr>
-              <strong><i class="fa-brands fa-linux"></i> FOSS-related things</strong>
+              <strong><i class="fa-brands fa-linux"></i> FOSS-related things, especially <a href="https://archlinux.org">ArchLinux</a></strong>
               <hr>
               <strong><i class="fa-regular fa-dumbbell"></i> Free weight Training</strong>
               <hr>
